--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romain Baucheron</title>
+    <link rel="shortcut icon" href="./public/assets/favicon.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./public/css/main.css">
     <link rel="stylesheet" href="./public/css/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./public/css/subpage.css">
 </head>
 
 <body>
@@ -83,14 +84,14 @@
                         </svg></g>
                 </svg>
             </a>
-            <nav class="nav">
-                <ul>
+            <nav class="nav collapse">
+                <ul class="collapse">
                     <li class="nav-list"><a href="#about">À propos</a></li>
                     <li class="nav-list"><a href="#projects">Projets</a></li>
                     <li class="nav-list"><a href="#skills">Compétences</a></li>
-                    <li class="nav-list">
+                    <li class="contact-list">
                         <ul class="contact">
-                            <li class="nav-list">
+                            <li class="nav-list click-contact">
                                 <a href="https://github.com/opertune" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 30 30"
                                         width="30px" height="30px">
@@ -99,7 +100,7 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li class="nav-list">
+                            <li class="nav-list click-contact">
                                 <a href="https://www.linkedin.com/in/romain-baucheron/" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 30 30"
                                         width="30px" height="30px">
@@ -108,7 +109,7 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li class="nav-list">
+                            <li class="nav-list click-contact">
                                 <a href="#contact">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <svg width="30px" height="30px" viewBox="0 0 48 48" fill="none"
@@ -141,7 +142,37 @@
             </div>
         </div>
     </header>
+    <!-- Main content -->
+    <main>
+        <!-- About -->
+        <div class="content" id="about">
+            <div class="about-text">
+                <p>Bonjour et bienvenue sur mon portfolio ! <br><br> Je m'appelle Romain et je suis développeur
+                    full-stack
+                    junior avec une préférence pour le back-end et les bases de données.</p>
+                <p>J'ai commencé la programmation en septembre 2019 durant ma première année de BTS SIO. <br> Puis, en
+                    juillet 2021, je suis entré en formation à l'AFPA de Pompey pour y préparer un titre professionnel
+                    de <a class="content-link"
+                        href="https://www.afpa.fr/formation-qualifiante/concepteur-developpeur-informatique"
+                        target="_blank">Concepteur Développeur d'Applications</a> que j'ai obtenu en juin 2022.</p>
+                <p>En dehors de l'informatique, je suis un fan incontesté de musique, de cuisine et de musculation.</p>
+            </div>
+            <div class="about-picture">
+                <img src="./public/assets/about-picture.jpeg" alt="Hands + Computer picture" srcset="">
+            </div>
+        </div>
+        <div id="projects" style="display: none;">
+            <p>projects</p>
+        </div>
+        <div id="skills" style="display: none;">
+            <p>skills</p>
+        </div>
+        <div id="contact" style="display: none;">
+            <p>contact</p>
+        </div>
+    </main>
 </body>
 <script src="./public/js/navbar.js" type="text/javascript"></script>
+<script src="./public/js/subpage.js" type="text/javascript"></script>
 
 </html>
